third_party/move/tools/move-decompiler/tests/compiler-v2-test/reference-safety/v1-tests/borrow_global.exp
module 0x8675309::M {
    struct R has key {
        f: u64,
    }
    fun t0(addr: address): bool {
        &borrow_global_mut(addr).f == &borrow_global(addr).f
    }
    fun t1(addr: address): bool {
        *&borrow_global(addr).f == *&borrow_global(addr).f
    }
    fun t2(addr: address): bool {
        *&borrow_global(addr).f == *&borrow_global(addr).f
    }
    fun t3(addr: address): bool {
        let R{f: _t4} = move_from(addr);
        *&borrow_global(addr).f == _t4
    }
    fun t4(cond: bool, addr: address): bool {
        let _t4;
        let _t2 = R{f: 0};
        if (cond) _t4 = borrow_global(addr) else _t4 = /*freeze*/&mut _t2;
        let R{f: _t18} = _t2;
        &borrow_global(addr).f == &_t4.f
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unable to infer instantiation of type `&mut key + struct{f}` (consider providing type arguments or annotating the type)
  ┌─ borrow_global.move:6:10
  │
6 │         &borrow_global_mut(addr).f == &borrow_global(addr).f
  │          ^^^^^^^^^^^^^^^^^^^^^^^

error: unable to infer instantiation of type `_` (consider providing type arguments or annotating the type)
  ┌─ borrow_global.move:6:10
  │
6 │         &borrow_global_mut(addr).f == &borrow_global(addr).f
  │          ^^^^^^^^^^^^^^^^^^^^^^^^^

error: unable to infer instantiation of type `&key + struct{f}` (consider providing type arguments or annotating the type)
  ┌─ borrow_global.move:6:40
  │
6 │         &borrow_global_mut(addr).f == &borrow_global(addr).f
  │                                        ^^^^^^^^^^^^^^^^^^^

error: unable to infer instantiation of type `&key + struct{f}` (consider providing type arguments or annotating the type)
  ┌─ borrow_global.move:9:11
  │
9 │         *&borrow_global(addr).f == *&borrow_global(addr).f
  │           ^^^^^^^^^^^^^^^^^^^

error: unable to infer instantiation of type `&_` (consider providing type arguments or annotating the type)
  ┌─ borrow_global.move:9:11
  │
9 │         *&borrow_global(addr).f == *&borrow_global(addr).f
  │           ^^^^^^^^^^^^^^^^^^^^^

error: unable to infer instantiation of type `&key + struct{f}` (consider providing type arguments or annotating the type)
  ┌─ borrow_global.move:9:38
  │
9 │         *&borrow_global(addr).f == *&borrow_global(addr).f
  │                                      ^^^^^^^^^^^^^^^^^^^

error: unable to infer instantiation of type `&key + struct{f}` (consider providing type arguments or annotating the type)
   ┌─ borrow_global.move:12:11
   │
12 │         *&borrow_global(addr).f == *&borrow_global(addr).f
   │           ^^^^^^^^^^^^^^^^^^^

error: unable to infer instantiation of type `&_` (consider providing type arguments or annotating the type)
   ┌─ borrow_global.move:12:11
   │
12 │         *&borrow_global(addr).f == *&borrow_global(addr).f
   │           ^^^^^^^^^^^^^^^^^^^^^

error: unable to infer instantiation of type `&key + struct{f}` (consider providing type arguments or annotating the type)
   ┌─ borrow_global.move:12:38
   │
12 │         *&borrow_global(addr).f == *&borrow_global(addr).f
   │                                      ^^^^^^^^^^^^^^^^^^^

error: unable to infer instantiation of type `&key + struct{f}` (consider providing type arguments or annotating the type)
   ┌─ borrow_global.move:16:11
   │
16 │         *&borrow_global(addr).f == _t4
   │           ^^^^^^^^^^^^^^^^^^^

error: unable to infer instantiation of type `&key + struct{f}` (consider providing type arguments or annotating the type)
   ┌─ borrow_global.move:23:10
   │
23 │         &borrow_global(addr).f == &_t4.f
   │          ^^^^^^^^^^^^^^^^^^^
